tdf#114219: Show Edit dialog entry in link section

Change-Id: I35c34d427cc5440994fc16ed7e4d307bc95bc533